# logistic-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
containers/: compose.yaml
src/: run.py
src/api/: __init__.py  dependencies.py  middlewares.py
src/api/http/v1/: __init__.py  auth.py
src/cli/: database.py  main.py  tenant.py
src/core/: app.py  config.py  database.py  unit_of_work.py
src/migrations/shared/: env.py
src/migrations/shared/versions/: 0001_tenant_user_models.py
src/migrations/tenant/: env.py
src/models/: __init__.py  auth.py  base.py
src/repositories/: auth.py  database.py
src/schemas/: auth.py
src/services/: auth.py  base.py  database.py
src/utils/: database.py  decorators.py  helpers.py
